[package]
name = "engula-supervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
clap = { version = "3.2.8", features = ["derive"] }
serde = { version = "1.0.138", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
rand = { version = "0.8.4", features = ["small_rng"] }


[dependencies.engula-client]
git = "https://github.com/engula/engula.git"
